-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.10, dev
-
None
-
Debian testing with qtbase built from dev branch as of c3171938c3e2426ca3391a7e7f531836e7a08383; also reproducible with the Kate text editor using the Debian-provided Qt 5.15.10+dfsg-3
-
-
d8e110054 (dev), 2b63d0ccf (dev), 5093e517b (dev), e0038c43b (6.6), d2a71d032 (6.6), aa152c3e4 (6.6), e896f23b6 (6.5), fd9bd700e (6.5), fc76d7b27 (6.5)
When a combobox is set as the buddy of a label, the currently selected option/value is not announced by the Orca screen reader when the combobox receives keyboard focus.
Sample steps to reproduce:
- start the Orca screen reader
- run the qtbase "contextinfo" sample (qtbase/examples/opengl/contextinfo/contextinfo)
- move keyboard focus to the combobox using the tab key (move back and forth to retest) and notice that only "context version, combobox" is announced, but not the value/option that is currently selected
- press Alt+Down_arrow to expand the popup holding the entries
- move around and select another entry, e.g. "2.1", press Enter to confirm
- move focus back and forth again and notice that the proper value is announced now
- switch value to "3.0" by just using the arrow down key, without opening the listbox popup. Note that this is not announced by the screen reader.
- switch focus back and forth again and notice that the old value is announced: "context version, combobox, 2.1"
Observations and further notes:
- Orca just announces "context version, combobox", but not the current value when the popup hasn't been opened yet. The value should be announced right away.
- The value is announced when the combobox is not set as the buddy of a label. In that case, only the value of the combobox is announced, because the combobox uses the value as it's accessible name (s. QAccessibleComboBox::text).
- The wrong value is announced in step 8.
- orca version used: 45.0-1
- I plan to submit a suggested fix to Gerrit.
Expected result:
Orca should always announce the currently selected value/option as well, e.g. "context version, combobox, 2.0".